--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,67 @@
 body{
-    background-color: #d9bdf3;
+    background-color: #f4ebfd;
+    font-family: Arial, Helvetica, sans-serif;
+    
+}
+h1{
+    font-weight: 800;
+    font-size: 36px;
+    line-height: 1.5;
+    text-align: center;
+    color: #272044;
+}
+.container{
+    margin: 120px auto;
+    max-width: 800px;
+}
+header{
+    margin-bottom: 30px;
+}
+form{
+    padding: 30px;
+    background-color: white;
+    border-radius: 10px;
+    display: flex;
+    margin-bottom: 30px;
+    box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
+}
+
+main{
+    margin-bottom: 30px;
+}
+.instruction{
+    padding: 16px;
+    border: 1px solid rgba(39, 33,66,0.5);
+    width:80%;
+    border-radius: 50px;
+    line-height: 1.5;
+    color: #272044;
+    font-size: 15px;
+}
+.submit-button{
+    margin-left: 10px;
+    width: 150px;
+    color: white;
+    border: none;
+    border-radius: 25px;
+    background-color: palevioletred;
+    padding: 14px 24px;
+    font-size:16px;
+}
+.peom{
+    font-size: 14px;
+    background-color: #fff;
+    padding: 20px;
+    line-height: 24px;
+    border-left: 3px solid #885df1;
+    box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
+
+
+}
+footer{
+    text-align: center;
+    font-size:16px
+}
+a{
+    color:palevioletred
 }
