--- a/src/style.css
+++ b/src/style.css
@@ -18,6 +18,7 @@ header{
     margin-bottom: 30px;
 }
 form{
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     padding: 30px;
     background-color: white;
     border-radius: 10px;
