--- a/src/style.css
+++ b/src/style.css
@@ -26,6 +26,9 @@ form{
     margin-bottom: 30px;
     box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
 }
+.peom strong{
+    color: #885df1;
+}
 
 main{
     margin-bottom: 30px;
